--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
-    "qr-image": "^3.2.0"
+    "express": "^4.17.1",
+    "hogan-express": "^0.5.2",
+    "qr-image": "^3.2.0",
+    "socket.io": "^2.3.0"
   }
 }
