--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "hogan-express": "^0.5.2",
+    "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "qr-image": "^3.2.0",
     "socket.io": "^2.3.0"
   }
